<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application stuff -->
    <string name="app_name">Tic Tac Head</string>

	<!-- login stuff -->
	<string name="login_connect">Connect using email</string>
	<string name="login_connecting">Connecting&#8230;</string>
	<string name="login_listing">Getting player list&#8230;</string>
	<string name="login_instruction">Log in with your email to start playing</string>

    <!-- Players -->
    <string name="player_rating">Rating: </string>

    <!-- Game stuff -->
    <string name="game_win">You win!</string>
    <string name="game_lose">You lose!</string>
    <string name="game_draw">Draw!</string>
    <string name="game_retry">Play again</string>
    <string name="game_turn_self">Your turn</string>
    <string name="game_turn_enemy">Opponent\'s turn</string>
    <string name="game_waiting">Waiting response&#8230;</string>
    <string name="game_updating">Updating&#8230;</string>
    <string name="game_sending">Sending&#8230;</string>
    <string name="game_loading">Loading&#8230;</string>

    <!-- Content descriptions -->
    <string name="content_close">Close game</string>
    <string name="content_players">Player list</string>
    <string name="content_avatar">Player avatar</string>
</resources>