<RelativeLayout 
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="net.ark.tictachead.fragments.TictactoeFragment" 
    android:background="@android:drawable/dialog_holo_light_frame"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
	android:padding="14dp"
>
	<ImageButton
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:paddingBottom="2dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:background="@drawable/item_background_holo_light"
           android:contentDescription="@string/content_close"
		android:src="@drawable/delete"
		android:id="@+id/button_close"
	/>
	<TextView
		android:id="@+id/label_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/button_close"
		android:layout_alignBottom="@+id/button_close"
		android:layout_toLeftOf="@+id/button_close"
		android:gravity="center_vertical"
		android:layout_marginBottom="2dp"
		android:layout_marginRight="8dp"
		android:layout_marginLeft="8dp"
		android:singleLine="true"
		android:textSize="20sp"
	/>
	<View
		android:layout_height="2dp"
		android:layout_width="match_parent"
		android:layout_below="@+id/button_close"
		android:background="@android:color/holo_blue_dark"
           android:layout_marginBottom="8dp"
		android:layout_marginTop="2dp"
		android:id="@+id/view_line"
	/>
       <LinearLayout
           android:id="@+id/layout_result"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_below="@+id/view_line"
           android:orientation="vertical"
		android:layout_margin="8dp"
           android:visibility="gone"
       >
           <View
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="1"
           />
           <TextView
               android:id="@+id/label_result"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/game_win"
               android:textStyle="bold"
               android:textSize="28sp"
           />
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
           >
               <Button
                   android:paddingTop="16dp"
                   android:paddingBottom="16dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_alignLeft="@+id/label_waiting"
                   android:layout_alignRight="@+id/label_waiting"
                   android:text="@string/game_retry"
                   android:visibility="invisible"
                   android:id="@+id/button_play"
               />
               <TextView
                   android:id="@+id/label_waiting"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_centerHorizontal="true"
                   android:text="@string/game_waiting"
                   android:textStyle="italic"
                   android:textSize="16sp"
               />
           </RelativeLayout>
           <View
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:layout_weight="0.9"
           />
       </LinearLayout>
       <RelativeLayout
           android:id="@+id/layout_loading"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/view_line"
           android:layout_margin="8dp"
           android:visibility="gone"
       >
           <ProgressBar
               android:id="@+id/progress_loading"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:indeterminate="true"
           />
           <TextView
               android:id="@+id/label_loading"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/progress_loading"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="4dp"
               android:text="@string/game_loading"
           />
       </RelativeLayout>
       <RelativeLayout
           android:id="@+id/layout_board"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@+id/view_line"
           android:layout_marginRight="8dp"
           android:layout_marginLeft="8dp"
           android:layout_marginTop="8dp"
       >
           <TextView
               android:id="@+id/label_turn"
               android:layout_height="32dp"
               android:layout_width="wrap_content"
               android:paddingBottom="4dp"
               android:textStyle="italic"
               android:gravity="bottom"
               android:text="@string/game_turn_self"
           />
           <TextView
               android:id="@+id/label_status"
               android:layout_height="48dp"
               android:layout_width="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_alignParentBottom="true"
               android:gravity="center_vertical"
               android:text="@string/game_updating"
           />
           <ProgressBar
               android:id="@+id/progress_updating"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignTop="@+id/label_status"
               android:layout_alignBottom="@+id/label_status"
               android:layout_toLeftOf="@+id/label_status"
               android:layout_alignParentLeft="true"
               android:layout_marginBottom="2dp"
               android:layout_marginRight="16dp"
               android:layout_marginTop="2dp"
           />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_above="@+id/label_status"
               android:layout_below="@+id/label_turn"
               android:orientation="vertical"
           >
               <LinearLayout
                   android:layout_weight="1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal"
               >
                   <View
                       android:id="@+id/view_cell00"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
                   <View
                       android:layout_width="2dp"
                       android:layout_height="match_parent"
                       android:background="@android:color/background_dark"
                   />
                   <View
                       android:id="@+id/view_cell10"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
                   <View
                       android:layout_width="2dp"
                       android:layout_height="match_parent"
                       android:background="@android:color/background_dark"
                   />
                   <View
                       android:id="@+id/view_cell20"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
               </LinearLayout>
               <View
                   android:layout_height="2dp"
                   android:layout_width="match_parent"
                   android:background="@android:color/background_dark"
               />
               <LinearLayout
                   android:layout_weight="1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal"
               >
                   <View
                       android:id="@+id/view_cell01"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
                   <View
                       android:layout_width="2dp"
                       android:layout_height="match_parent"
                       android:background="@android:color/background_dark"
                   />
                   <View
                       android:id="@+id/view_cell11"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
                   <View
                       android:layout_width="2dp"
                       android:layout_height="match_parent"
                       android:background="@android:color/background_dark"
                   />
                   <View
                       android:id="@+id/view_cell21"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
               </LinearLayout>
               <View
                   android:layout_height="2dp"
                   android:layout_width="match_parent"
                   android:background="@android:color/background_dark"
               />
               <LinearLayout
                   android:layout_weight="1"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal"
               >
                   <View
                       android:id="@+id/view_cell02"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
                   <View
                       android:layout_width="2dp"
                       android:layout_height="match_parent"
                       android:background="@android:color/background_dark"
                   />
                   <View
                       android:id="@+id/view_cell12"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
                   <View
                       android:layout_width="2dp"
                       android:layout_height="match_parent"
                       android:background="@android:color/background_dark"
                   />
                   <View
                       android:id="@+id/view_cell22"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_weight="1"
                       android:clickable="true"
                   />
               </LinearLayout>
           </LinearLayout>
       </RelativeLayout>
</RelativeLayout>